<resources>
    <string name="app_name">Food App</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_google">SIGN IN WITH GOOGLE</string>
    <string name="create_new_account">Create New Account</string>
    <string name="update_profile_label">Update profile</string>
    <string name="change_password_label">Change Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="name">Name</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="back">BACK</string>
    <string name="sign_in_lower">Sign In</string>
    <string name="not_processed">NOT PROCESS</string>
    <string name="processing">PROCESSING</string>
    <string name="shipped">SHIPPING</string>
    <string name="delivered">DELIVERED</string>
    <string name="cancelled">CANCELED</string>
    <string name="home">Home</string>
    <string name="order">My Order</string>
    <string name="user">Profile</string>
    <string name="setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="genderItem">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="see_all">See More</string>
</resources>