<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:layout_marginTop="@dimen/_16sdp"
    tools:context=".fragments.MyOrder">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pendingBtn_orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/not_processed"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/processingBtn_orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/processing"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/shippingBtn_orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/shipped"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/completedBtn_orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/delivered"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/canceledBtn_orderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/cancelled"
                android:textColor="@color/white" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/orderRV_orderList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

</LinearLayout>